kind-deployment/dashboard/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/part-of: quizzler-system
    capability: dashboard
